<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ IONOS HiDrive Next - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2025 STRATO GmbH.
  ~ SPDX-License-Identifier: GPL-2.0
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/scanbot_camera_toolbar_height"
		android:background="?scanbot_camera_toolbar_background">

		<TextView
			android:id="@+id/tvFlashStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|right"
			android:layout_marginRight="@dimen/scanbot_padding_normal"
			android:text="@string/scanbot_camera_flash_button"
			android:textColor="@drawable/scanbot_camera_toggle_text_color_selector"
			app:drawableLeftCompat="@drawable/scanbot_camera_flash_btn_selector" />

		<TextView
			android:id="@+id/tvAutomaticCaptureStatus"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|left"
			android:layout_marginLeft="@dimen/scanbot_padding_normal"
			android:text="@string/scanbot_camera_automatic_btn"
			android:textColor="@drawable/scanbot_camera_toggle_text_color_selector" />

	</FrameLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<io.scanbot.sdk.camera.ScanbotCameraView
			android:id="@+id/scvCameraa"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

		<io.scanbot.sdk.ui.PolygonView
			android:id="@+id/pvPolygon"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:polygonFillColor="?scanbot_camera_polygon_fill_color"
			app:polygonStrokeColor="?scanbot_camera_polygon_stroke_color"
			app:polygonStrokeWidth="@dimen/scanbot_camera_polygon_stroke_widht" />

        <com.ionos.scanbot.screens.camera.ui_components.UserGuidanceView
            android:id="@+id/userGuidance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/scanbot_padding_normal">
        </com.ionos.scanbot.screens.camera.ui_components.UserGuidanceView>

	</FrameLayout>

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?scanbot_camera_bottom_bar_background">

		<TextView
			android:id="@+id/tvCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|start"
			android:layout_marginStart="@dimen/scanbot_padding_normal"
			android:padding="@dimen/scanbot_padding_small"
			android:text="@string/scanbot_cancel_btn_title"
			android:textColor="?scanbot_camera_screen_cancel_text_color"
			android:textSize="@dimen/scanbot_text_size" />

		<ImageView
			android:id="@+id/ivTakePhoto"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="@dimen/scanbot_padding_small_2"
			android:background="@drawable/scanbot_camera_button_selector"
			android:padding="@dimen/scanbot_padding_small"
			android:src="@drawable/scanbot_ic_photo_camera"/>

		<TextView
			android:id="@+id/tvImport"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:layout_marginEnd="@dimen/scanbot_padding_normal"
			android:padding="@dimen/scanbot_padding_small"
			android:text="@string/scanbot_camera_import_btn_title"
			android:textColor="?scanbot_camera_screen_cancel_text_color"
			android:textSize="@dimen/scanbot_text_size" />

	</FrameLayout>

</LinearLayout>